--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>안녕</h1>
     <p>내 이름은 루니야.</p>
     <p>Where have you been ? Im waiting for you.</p>
+    <p>Slow but steady always win the race and keep it real , be yourself.</p>
 </body>
 </html>
