--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <p>내 이름은 루니야.</p>
     <p>Where have you been ? Im waiting for you.</p>
     <p>Slow but steady always win the race and keep it real , be yourself.</p>
+
+    <img src="apple.png" alt="apple" width="300" />
+
 </body>
 </html>
