--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Where have you been ? Im waiting for you.</p>
     <p>Slow but steady always win the race and keep it real , be yourself.</p>
 
-    <img src="apple.png" alt="apple" width="300" />
+    <img src="kakao.png" alt="apple" width="300" />
 
 </body>
 </html>
