--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p>내 이름은 루니야.</p>
     <p>Where have you been ? Im waiting for you.</p>
     <p>Slow but steady always win the race and keep it real , be yourself.</p>
+    <p>Slow but steady always win the race and keep it real , be yourself.</p>
+    <p>Slow but steady always win the race and keep it real , be yourself.</p>
 
     <img src="kakao.png" alt="apple" width="300" />
 
