--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>h1{
+        color: brown
+    };
+
+    
+    
+    </style>
 </head>
 <body>
     <h1>안녕</h1>
