--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <p>Slow but steady always win the race and keep it real , be yourself.</p>
     <p>Slow but steady always win the race and keep it real , be yourself.</p>
     <p>Slow but steady always win the race and keep it real , be yourself.</p>
+    
+    <a href="20210204/01_character.html">im rooney</a>
 
     <img src="kakao.png" alt="apple" width="300" />
 
