--- a/20210204/07_image.html
+++ b/20210204/07_image.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hi rooney</title>
+    <title>Document</title>
 </head>
 <body>
-    
+    <img src="카카오.png" alt="" width=""/>
 </body>
 </html>
