--- a/20210204/08_introduce_myself.html
+++ b/20210204/08_introduce_myself.html
@@ -83,6 +83,35 @@
         </center>
     </div><br />
 
+    <div id="container">
+        <center>
+            <div id="item"><h1>Personal_Activity</h1></div>
+        </center>
+    </div><br />
+
+    <div id="container">
+    <center>  
+    <audio controls="controls">
+        <source src="Kalimba.mp3" type="audio/mp3" />
+        <source src="Kalimba.ogg" type="audio/ogg" />
+    </audio>
+    </center>  
+    </div><br />
+
+    <div id="container">
+    <center>
+
+    <video poster="http://placehold.it/640*360"
+           width="640" height="360" controls autoplay muted="controls">
+    <source src="Wildlife.mp4" type="video/mp4" />
+    <source src="Wildlife.webm" type="video/webm">
+    </video>
+    </center>
+    </div>
+   
+
+    
+
 
 </body>
 </html>
