--- a/20210217/12_z_index.html
+++ b/20210217/12_z_index.html
@@ -28,13 +28,25 @@
         {
             background-color: midnightblue;
             left: 90px; top: 90px;
-            z-index: 1;
+        
+        }
+        body>div
+        {
+            width: 400px;
+            height: 100px;
+            border: 3px solid black;
+            position: relative;
+            overflow: hidden;
         }
     </style>
 </head>
 <body>
-    <div class="box red"></div>
-    <div class="box green"></div>
-    <div class="box blue"></div>
+    <h1>Seize the day Seize the day Seize the day</h1>
+    <div>
+        <div class="box red"></div>
+        <div class="box green"></div>
+        <div class="box blue"></div>
+</div>
+    <h1>Seize the day Seize the day Seize the day</h1>
 </body>
 </html>
