--- a/First_Web_Service/index.html
+++ b/First_Web_Service/index.html
@@ -152,7 +152,7 @@
 
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
-                        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+                        <a class="portfolio-link" href="https://www.hackers.co.kr/?c=s_toeic/toeic_winter/movie_expect_toeic&keywd=haceng_submain_lnb_toeic_movie_expect_toeic&logger_kw=haceng_submain_lnb_toeic_movie_expect_toeic#;">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
@@ -168,7 +168,7 @@
 
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
-                        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+                        <a class="portfolio-link" href="https://www.ted.com/">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
@@ -184,7 +184,7 @@
 
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
-                        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+                        <a class="portfolio-link" href="https://www.hackers.co.kr/?c=s_gov/gov_lec/gov_PS/gov_grammar/gov_grammar_info_2021&keywd=haceng_submain_lnb_gov_word_info&logger_kw=haceng_submain_lnb_gov_word_info">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
@@ -200,7 +200,7 @@
 
                 <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                     <div class="portfolio-item">
-                        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+                        <a class="portfolio-link" href="https://legendstudy.com/">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
@@ -216,7 +216,7 @@
 
                 <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
                     <div class="portfolio-item">
-                        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+                        <a class="portfolio-link" href="https://www.edwith.org/search/index?categoryId=119">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
@@ -232,7 +232,7 @@
                 
                 <div class="col-lg-4 col-sm-6">
                     <div class="portfolio-item">
-                        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+                        <a class="portfolio-link" href="https://www.edwith.org/search/index?categoryId=71">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
